==History

jerbil-0.2.12 27-Nov-2011

Attempt to fix bug where restarting service with old records on other servers 
removes new service's record on own server!

jerbil-0.2.11 25-Sep-2011

Set default config file to be module.rb rather than module.conf

jerbil-0.2.10 24-Sep-2011

thor actions: check that a link exists before testing it is equal

jerbil-0.2.9 24-Sep-2011

Add separate re-useable thor module for common install actions

jerbil-0.2.8 21-Sep-2011

Update jerbs install to ensure files are moved to the correct place

jerbil-0.2.7 21-Sep-2011

Add 'etc' to gemspec

jerbil-0.2.6 21-Sep-2011

Include new jerbs command based on thor, and change Jerbil.remove so that it
attempts to remove a service from remote servers even if it is not registered
locally.

jerbil-0.2.5 17-Sep-2011

Adjust RUBYOPT etc in runscript

jerbil-0.2.4 17-Sep-2011

Add chmod to install

jerbil-0.2.3 17-Sep-2011

Correct runscript!

jerbil-0.2.2 17-Sep-2011

Correct uid in jerbs install

jerbil-0.2.1 17-Sep-2011

Adds in the jerbs executable, being a prospective replacement for bin/jerbil using thor
and including an install command

jerbil-0.2.0 08-Sep-2011

Migrate to Jelly 1.0
Add colour to jerbil listings
Fix bug in missing_service that failed to remove from local server
Add test to see if prior registered service is responding and kick it if it is not

jerbil-0.1.12 04-Aug-2011

ensure that jerbild daemon creates things in a defined directory.
delete pid and key files before trying to open them in case of permissions problems.

jerbil-0.1.11 02-Aug-2011

Included logging in jerbild to avoid whatever caused the daemonised version to fail.
Change default config file for jerbil to jerbil-client.conf.

jerbil-0.1.10 09-June-2011

Minor fix for incorrect exception names in jerbil/support

jerbil-0.1.9 01-June-2011

correct version method to respond with Jerbil::Version and add to output of bin/jerbil -S

jerbil-0.1.8 01-June-2011

Added back the verify method to JerbilService::Client!
