@@ -1,11 +1,10 @@
 # Created by Jevoom
 #
-# 27-Nov-2011
-#   Attempt to fix bug where restarting service with old records on other servers 
-#   removes new service's record on own server!
+# 19-Dec-2011
+#   improvements to supervisor class to add daemon log and catch errors more often
 
 module Jerbil
-  Version = '0.2.12'
-  Version_Date = '27-Nov-2011'
-  Ident = 'jerbil-0.2.12 27-Nov-2011'
+  Version = '0.2.14'
+  Version_Date = '19-Dec-2011'
+  Ident = 'jerbil-0.2.14 19-Dec-2011'
 end
